@@ -22,6 +22,7 @@ package com.sun.max.vm.value;
 
 import java.io.*;
 
+import com.sun.cri.ci.*;
 import com.sun.max.lang.*;
 import com.sun.max.unsafe.*;
 import com.sun.max.vm.type.*;
@@ -122,7 +123,7 @@ public final class IntValue extends PrimitiveValue<IntValue> {
 
     @Override
     public Object asBoxedJavaValue() {
-        return new Integer(value);
+        return Integer.valueOf(value);
     }
 
     @Override
@@ -244,5 +245,10 @@ public final class IntValue extends PrimitiveValue<IntValue> {
     @Override
     public void write(DataOutput stream) throws IOException {
         stream.writeInt(value);
+    }
+
+    @Override
+    public CiConstant asCiConstant() {
+        return CiConstant.forInt(value);
     }
 }
