@@ -22,6 +22,7 @@ package com.sun.max.vm.value;
 
 import java.io.*;
 
+import com.sun.cri.ci.*;
 import com.sun.max.lang.*;
 import com.sun.max.unsafe.*;
 import com.sun.max.vm.runtime.*;
@@ -114,7 +115,7 @@ public final class LongValue extends PrimitiveValue<LongValue> {
 
     @Override
     public Long asBoxedJavaValue() {
-        return new Long(value);
+        return Long.valueOf(value);
     }
 
     @Override
@@ -214,4 +215,10 @@ public final class LongValue extends PrimitiveValue<LongValue> {
     public void write(DataOutput stream) throws IOException {
         stream.writeLong(value);
     }
+
+    @Override
+    public CiConstant asCiConstant() {
+        return CiConstant.forLong(value);
+    }
+
 }
